--- a/app/views/appointments/show.html.erb
+++ b/app/views/appointments/show.html.erb
@@ -1,5 +1,3 @@
-<% date = @appointment.appointment_datetime %>
-<p>Time: <%= date.strftime("%B") %> <%= date.strftime("%e") %>, <%= date.strftime("%Y") %> at <%= date.strftime("%H") %>:<%= date.strftime("%M") %><br>
-  Doctor: <%= link_to @appointment.doctor.name, doctor_path(@appointment.doctor) %>
-  Patient: <%= link_to @appointment.patient.name, patient_path(@appointment.patient) %>
-  <br>
+<%= @appointment.appointment_datetime.strftime("%B %d, %Y at %k:%M") %>
+<%= link_to @appointment.doctor_name, doctor_path(@appointment.doctor_id) %>
+<%= link_to @appointment.patient_name, patient_path(@appointment.patient_id) %>
