--- a/app/views/doctors/show.html.erb
+++ b/app/views/doctors/show.html.erb
@@ -1,10 +1,5 @@
-<h1><%= @doctor.name %></h1>
-<h3>Department: <%= @doctor.department %></h3>
-<h4>Appointments:</h4>
-<br>
-<%= @doctor.appointments.each do |appointment| %>
-<% date = appointment.appointment_datetime %>
-<p>Time: <%= date.strftime("%B") %> <%= date.strftime("%e") %>, <%= date.strftime("%Y") %> at <%= date.strftime("%H") %>:<%= date.strftime("%M") %><br>
-  Patient: <%= link_to appointment.patient.name, patient_path(appointment.patient) %>
-  <br>
+<%= @doctor.name %><br>
+<% @doctor.appointments.each do |appointment| %>
+  <% @doctor_patient = @doctor.patients.find(appointment.patient_id) %>
+  <%= link_to @doctor_patient.name, patient_path(@doctor_patient) %> - <%= link_to appointment.appointment_datetime.strftime("%B %d, %Y at %k:%M"), appointment_path(appointment) %><br>
 <% end %>
