--- a/app/views/patients/index.html.erb
+++ b/app/views/patients/index.html.erb
@@ -1,7 +1,7 @@
+<h1> Patients </h1>
 <ul>
 <% @patients.each do |patient| %>
-<li><h3>Name: <%= link_to patient.name, patient_path(patient) %> Number of Appointments: <%= patient.appointments.count %></h3></li>
-<h4>
+  <li>Name: <%= link_to patient.name, patient_path(patient) %> Number of Appointments: <%= patient.appointments.count %></li>
 <br>
 <% end %>
 </ul>
