--- a/app/views/patients/show.html.erb
+++ b/app/views/patients/show.html.erb
@@ -1,2 +1,3 @@
-<%= @patient.name %>
-<%= @patient.age %>
+<% @patient.appointments.each do |app| %>
+    <%= app.appointment_datetime.strftime("%B %d, %Y at %H:%M") %>
+<% end %>
