--- a/app/views/patients/show.html.erb
+++ b/app/views/patients/show.html.erb
@@ -1,3 +1,5 @@
+<ul>
 <% @patient.appointments.each do |app| %>
-    <%= app.appointment_datetime.strftime("%B %d, %Y at %H:%M") %>
+    <li><%= "#{app.appointment_datetime.strftime("%B %d, %Y at %H:%M")}" %> - <%= link_to app.doctor.name, doctor_path(app.doctor.id)%></li>
 <% end %>
+</ul>
